--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- section-2 -->
 
     <div
-      class="container mx-auto border-2 bg-yellow-50 py-20 border-black flex flex-wrap justify-evenly items-center sm:px-auto"
+      class="container mx-auto  bg-yellow-50 py-20  flex flex-wrap justify-evenly items-center sm:px-auto"
     >
       <div>
         <h1
