--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
       <!-- footer middle -->
       <div class="flex flex-wrap justify-between text-gray-300 py-5 border-b border-gray-500 ">
-        <div>
+        <div class="py-3">
           <ul>
             <li class="text-white font-bold">
               ONLINE STORE</li>
@@ -375,7 +375,7 @@
             
           </ul>
         </div>
-        <div>
+        <div class="py-3">
           <ul>
           <br>   
            <li>Ecommerce website</li>
@@ -385,7 +385,7 @@
            <li>Ecommerce hosting</li>
           </ul>
         </div>
-        <div>
+        <div class="py-3">
           <ul>
             <br>
              <li>Mobile commerce</li>
@@ -395,14 +395,14 @@
                 <li>Store themes</li>
           </ul>
         </div>
-        <div>
+        <div class="py-3">
           <ul>
             <li class="text-white font-bold">POINT OF SALE</li>
              <li>Point of sale</li>
               <li>Features</li>
           </ul>
         </div>
-        <div>
+        <div class="py-3">
           <ul>
             
            <li class="text-white font-bold">SUPPORT</li>
@@ -419,7 +419,7 @@
              <li>Legal</li>
           </ul>
         </div>
-        <div>
+        <div class="py-3">
           <ul >
             <li class="text-white font-bold">SHOPIFY</li>
                            <li>Contact</li>
