README.md file added

--- a/index.html
+++ b/index.html
@@ -207,9 +207,7 @@
         </div>
         <div class="2xl:py-40">
           <h1 class="text-4xl text-black py-3 font-sans">Sell everywhere</h1>
-          <p class="text-xl text-gray-700 py-3 font-sans">Use one platform to sell products to anyone, anywhere—in person<br> with Point of Sale and online through your website, social media,<br> and online marketplaces.
-
-          </p>
+          <p class="text-xl text-gray-700 py-3 font-sans">Use one platform to sell products to anyone, anywhere—in person<br> with Point of Sale and online through your website, social media,<br> and online marketplaces.</p>
           <p class="text-[#004c3f] text-lg font-bold">Explore ways to sell <snap>&#8594</snap></p>
         </div>
       </div>
@@ -276,9 +274,9 @@
     <!-- section 7 -->
     <div  class="flex flex-wrap container mx-auto justify-center items-center py-20">
       <div>
-    <img src="./assets/women.png" alt="">
+        <img src="./assets/women.png" alt="">
       </div>
-      <div class="">
+      <div >
         <div class="bg-[#002e25] p-20">
         <p class="text-3xl py-5 text-white">“Shopify was my knight in shining<br> armor when I exhausted every <br>other possibility of getting my <br>online store up and running. It was<br> stunningly easy to use, with more<br> features and plug-ins that I didn’t <br>even know I wanted.”</p>
         <img  class=" pl-20 ml-10 sm:pl-40" src="./assets/logo.png" alt="">
@@ -306,24 +304,18 @@
           <div class="">
             <h1 class="text-xl font-bold pb-4">Shopify support</h1>
             <p class="text-md pb-4">Contact support 24/7, whether<br> you’re troubleshooting issues or<br> looking for business advice.</p>
-            <h3 class="text-[#004c3f] text-sm sm:text-md pb-4 font-bold">Contact support <snap>&#8594</snap>
-
-            </h3>
+            <h3 class="text-[#004c3f] text-sm sm:text-md pb-4 font-bold">Contact support <snap>&#8594</snap></h3>
           </div>
           <div>
             <h1 class="text-xl font-bold pb-4">Shopify App Store</h1>
             <p class="text-md pb-4">Add features and functionality to your<br> business with 6,000+ apps that integrate<br> directly with Shopify.</p>
-            <h3 class="text-[#004c3f] text-sm sm:text-md pb-4 font-bold">Visit the Shopify App Store <snap>&#8594</snap>
-
-            </h3>
+            <h3 class="text-[#004c3f] text-sm sm:text-md pb-4 font-bold">Visit the Shopify App Store <snap>&#8594</snap></h3>
           </div>
         </div>
         <div>
           <h1 class="text-xl font-bold pb-4">Shopify Experts Marketplace</h1>
           <p class="text-md pb-4">Hire a Shopify expert to help you with <br>everything from store setup to SEO.</p>
-          <h3 class="text-[#004c3f] text-sm sm:text-md pb-4 font-bold">Explore the Shopify Experts Marketplace <snap>&#8594</snap>
-
-          </h3>
+          <h3 class="text-[#004c3f] text-sm sm:text-md pb-4 font-bold">Explore the Shopify Experts Marketplace <snap>&#8594</snap></h3>
         </div>
       </div>
       <div>
@@ -336,12 +328,10 @@
       <h1 class="text-4xl">Start your business journey with Shopify</h1>
       <p class="text-xl pb-4 text-gray-700 py-4">Try Shopify for free, and explore all the tools and services you need to start, run, and grow<br> your business.</p>
       <div class="flex justify-center py-4">
-
         <button
-        class="text-xl px-7 py-3  font-bold cursor-pointer bg-green-800 text-white rounded-sm font-sans "
-        >
+        class="text-xl px-7 py-3  font-bold cursor-pointer bg-green-800 text-white rounded-sm font-sans ">
         Start free Trial
-      </button>
+        </button>
     </div>
     </div>
 
@@ -364,10 +354,8 @@
       <div class="flex flex-wrap justify-between text-gray-300 py-5 border-b border-gray-500 ">
         <div class="py-3">
           <ul>
-            <li class="text-white font-bold">
-              ONLINE STORE</li>
-            <li >
-              Sell online</li>
+            <li class="text-white font-bold">ONLINE STORE</li>
+            <li >Sell online</li>
             <li>Features</li>
             <li>Examples</li>
             <li>Website builder</li>
@@ -388,47 +376,47 @@
         <div class="py-3">
           <ul>
             <br>
-             <li>Mobile commerce</li>
+            <li>Mobile commerce</li>
             <li>Ecommerce software</li>
             <li>Online store builder</li>
-             <li> Dropshipping Business</li>
-                <li>Store themes</li>
+            <li> Dropshipping Business</li>
+            <li>Store themes</li>
           </ul>
         </div>
         <div class="py-3">
           <ul>
             <li class="text-white font-bold">POINT OF SALE</li>
-             <li>Point of sale</li>
-              <li>Features</li>
+            <li>Point of sale</li>
+            <li>Features</li>
           </ul>
         </div>
         <div class="py-3">
           <ul>
             
-           <li class="text-white font-bold">SUPPORT</li>
-           <li>24/7 support</li>
-           <li>Shopify Help Center</li>
+            <li class="text-white font-bold">SUPPORT</li>
+            <li>24/7 support</li>
+            <li>Shopify Help Center</li>
             <li>Shopify Community</li>
-           <li>API documentation</li>
-           <li>Free tools</li>
+            <li>API documentation</li>
+            <li>Free tools</li>
             <li>Free stock photos</li>
             <li>Websites for sale</li>
             <li>Logo Maker</li>
             <li>Business name generator</li>
-             <li>Research</li>
-             <li>Legal</li>
+            <li>Research</li>
+            <li>Legal</li>
           </ul>
         </div>
         <div class="py-3">
           <ul >
             <li class="text-white font-bold">SHOPIFY</li>
-                           <li>Contact</li>
-                           <li>Partner program</li>
-                          <li>Affiliate program</li>
-                          <li>App developers</li>
-                           <li>Investors</li>
-                           <li>Blog topics</li>
-                           <li>Community Events</li>
+            <li>Contact</li>
+            <li>Partner program</li>
+        <li>Affiliate program</li>
+        <li>App developers</li>
+        <li>Investors</li>
+        <li>Blog topics</li>
+        <li>Community Events</li>
           </ul>
         </div>
       </div>
